[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
authors = [
  { name = "Anna P", email = "ann.papakonstantopoulou@gmail.com" }
]
description = "API for LLM integration"

[tool.setuptools]
package-dir = {"" = "src"}
